Fixed carousel z-index

--- a/ecom-frontend/styles/pages/_home.scss
+++ b/ecom-frontend/styles/pages/_home.scss
@@ -8,6 +8,7 @@
         .react-multi-carousel-list {
             direction: ltr;
             margin-block-end: 30px;
+            z-index: 1;
         }
 
         .cards-container {
